# nix-plugins

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.in  README.md  config.mk  configure  exec.cc  extra-builtins.cc  flake.nix  initialize.cc  nix-plugins-config.h.in  primops.hpp  readdir.cc
